<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_account"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            />

        <EditText

            android:id="@+id/editAccountName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/dark"
            android:ems="10"
            android:hint="@string/account_name"

            android:inputType = "textCapSentences"
            android:textColor="@color/dark"
            android:textColorHint="@color/dark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_tall_divider"
            android:showDividers="middle"

            android:orientation="horizontal">

            <Button
                android:id="@+id/add_button"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/green_button"
                android:text="@string/add"
                android:textAllCaps="false"

                />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/cancel_button"
                android:text="@string/cancel"
                android:textAllCaps="false"

                />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>