<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    >

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <TextView
            android:id="@+id/transaction_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/sum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/black"
            android:hint="@string/sum"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:paddingStart="2dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/currency"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:layout_marginEnd="5dp"
                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/currency"
                android:visibility="visible"
                android:backgroundTint="@color/dark"
                />

        </LinearLayout>



        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/comment"
            android:backgroundTint="@color/black"
            android:inputType = "textCapSentences"
            android:textColor="@color/black"
            android:textColorHint="@color/dark"
            android:layout_marginBottom="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_tall_divider"
            android:showDividers="middle"

            android:orientation="horizontal">

            <Button
                android:id="@+id/ok_button"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/green_button"
                android:text="@string/ok"
                android:textAllCaps="false"

                />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/cancel_button"
                android:text="@string/cancel"
                android:textAllCaps="false"

                />

        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>